fix missing background for events in some cases

--- a/static/css/dhtmlx/dhtmlxscheduler_material.css
+++ b/static/css/dhtmlx/dhtmlxscheduler_material.css
@@ -204,6 +204,9 @@ div.dhx_modal_cover {
   border: 1px solid #ff3c3c;
   color: #FFF;
 }
+.dhx_cal_event {
+  background-color: #0288d1;
+}
 .dhx_cal_event .dhx_header,
 .dhx_cal_event .dhx_title,
 .dhx_cal_event .dhx_body,
